// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.mastodon";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

service Greeter {

  rpc addMovingSpot(AddMovingSportRequest) returns (Empty) {}
}

message AddMovingSportRequest {
  string id = 1;
  repeated Coordinates coordinates = 2;
}

message Coordinates {
  float x = 2;
  float y = 3;
  float z = 4;
  int32 time = 1;
}

message Empty {}
