// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.mastodon";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package mastodon_blender_view;

service ViewService {

  rpc getVersion(Empty) returns (VersionResponse) {}

  rpc closeAll(Empty) returns (Empty) {}

  rpc addSpot(AddSpotRequest) returns (Empty) {}

  rpc setSpotColors(SetSpotColorsRequest) returns (Empty) {}

  rpc setSpotVisibilityAndPosition(SetSpotPositionRequest) returns (Empty) {}

  rpc setTimePoint(SetTimePointRequest) returns (Empty) {}

  rpc getTimePoint(Empty) returns (TimePointResponse) {}

  rpc setActiveSpot(SetActiveSpotRequest) returns (Empty) {}

  rpc getActiveSpot(Empty) returns (ActiveSpotResponse) {}

  rpc subscribeToChange(Empty) returns (stream ChangeMessage) {}

  rpc setTagSetList(SetTagSetListRequest) returns (Empty) {}

  rpc getSelectedTagSet(Empty) returns (SelectedTagSetResponse) {}

  rpc getSelectedSyncGroup(Empty) returns (SelectedSyncGroupResponse) {}
}

message Empty {}

message VersionResponse {
  string version = 1;
}

message AddSpotRequest {
  uint32 id = 1;
  string label = 2;
  uint32 color = 3;
  repeated float coordinates = 4;
}

message SetSpotColorsRequest {
  repeated uint32 ids = 1;
  repeated uint32 colors = 2;
}

message SetSpotPositionRequest {
  repeated uint32 ids = 1;
  repeated float coordinates = 2;
}

message SetTimePointRequest {
  uint32 timepoint = 1;
}

message ActiveSpotResponse {
  uint32 id = 1;
}

message SetActiveSpotRequest {
  uint32 id = 1;
}

message TimePointResponse {
  uint32 timePoint = 1;
}

message ChangeMessage {
  ChangeId id = 1;
}

enum ChangeId {
  TIME_POINT = 0;
  ACTIVE_SPOT = 1;
  UPDATE_COLORS_REQUEST = 2;
  SELECTED_TAG_SET = 3;
  SYNC_GROUP = 4;
}

message SetTagSetListRequest {
  repeated string tag_set_names = 1;
}

message SelectedTagSetResponse {
  int32 index = 1;
}

message SelectedSyncGroupResponse {
  int32 index = 1;
}
